Atualizações das functions